version-23.1/deploy/deployment-option/self-hosted/kubernetes/shared/guides/_deploy-redpanda.mdx
In this step, you deploy Redpanda with SASL authentication and self-signed TLS certificates. Redpanda Console is included as a subchart in the Redpanda Helm chart.

1. Add the Redpanda Helm chart repository and install cert-manager using Helm:

  ```bash
  helm repo add redpanda https://charts.redpanda.com && helm repo add jetstack https://charts.jetstack.io && helm repo update && helm install cert-manager jetstack/cert-manager  --set installCRDs=true --namespace cert-manager  --create-namespace
  ```

  The Redpanda Helm chart uses cert-manager to manage TLS certificates.

1. Install Redpanda with SASL and TLS enabled:

  ```bash
  export DOMAIN=customredpandadomain.local && \
  helm install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set auth.sasl.enabled=true \
    --set "auth.sasl.users[0].name=superuser" \
    --set "auth.sasl.users[0].password=secretpassword" \
    --set external.domain=${DOMAIN} --wait
  ```

  Here, you create a superuser called `superuser` that can grant permissions to new users in your cluster using access control lists (ACLs).

  The installation displays some tips for getting started.

  If the installation is taking a long time, see [Troubleshooting](#troubleshooting).

1. Verify that each Redpanda broker is scheduled on only one Kubernetes node:

  ```bash
  kubectl get pod -n redpanda  \
  -o=custom-columns=NODE:.spec.nodeName,NAME:.metadata.name -l \
  app.kubernetes.io/component=redpanda-statefulset
  ```

  <details>
  <summary>
  Example output
  </summary>
  
  ```
  example-worker3   redpanda-0
  example-worker2   redpanda-1
  example-worker    redpanda-2
  ```

  </details>
